fix filter layout, latest token address overflow

--- a/src/jsx/components/live-new-tokens/live-new-tokens.scss
+++ b/src/jsx/components/live-new-tokens/live-new-tokens.scss
@@ -1,6 +1,10 @@
 .token-address{
     color: #18A594;
     cursor: pointer;
+    text-overflow: ellipsis;
+    display: inline-block; /* for inline elements e.g. span, strong, em etc */
+    text-overflow: ellipsis;
+    width: calc(80%);
 
 }
 
